--- a/base/function.html
+++ b/base/function.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Intro - JavaScript Theory</title>
+    <title>Function - JavaScript Theory</title>
 </head>
 <body>
     <div class="container">
-		<h1 class="text-center">Intro - JavaScript Theory</h1>
+		<h1 class="text-center">Function - JavaScript Theory</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
