add delay theory

--- a/base/index.html
+++ b/base/index.html
@@ -66,7 +66,7 @@
             </div>
             <div class="col-4">
                 <div class="list-group">
-                    <a target="_blank" href="if.html" class="list-group-item list-group-item-action list-group-item-secondary">If</a>
+                    <a target="_blank" href="condition.html" class="list-group-item list-group-item-action list-group-item-secondary">Condition</a>
                 </div>
                 <div class="list-group">
                     <a target="_blank" href="delay.html" class="list-group-item list-group-item-action list-group-item-secondary">Delay</a>
