--- a/base/element.html
+++ b/base/element.html
@@ -40,7 +40,7 @@
                             <td>
                                 <a href="https://drive.google.com/file/d/1pmp2sW0sSUIXvs1xfAYD1v3-qzeV_0Xv/view?usp=sharing">Text Node Create</a>
                             </td>
-                            <td></td>
+                            <td>Добавление текста в элемент</td>
                         </tr>
 						<tr>
                             <td class="text-center">4</td>
