--- a/base/index.html
+++ b/base/index.html
@@ -29,30 +29,18 @@
                     <a target="_blank" href="function.html" class="list-group-item list-group-item-action list-group-item-secondary">Function</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="this.html" class="list-group-item list-group-item-action list-group-item-secondary">This</a>
-                </div>
-                <div class="list-group">
                     <a target="_blank" href="object.html" class="list-group-item list-group-item-action list-group-item-secondary">Object</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="array/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Array</a>
+                    <a target="_blank" href="element_base.html" class="list-group-item list-group-item-action list-group-item-secondary">Element Base</a>
                 </div>
             </div>
             <div class="col-4">
                 <div class="list-group">
-                    <a target="_blank" href="dom.html" class="list-group-item list-group-item-action list-group-item-secondary">DOM</a>
-                </div>
-                <div class="list-group">
-                    <a target="_blank" href="search_element.html" class="list-group-item list-group-item-action list-group-item-secondary">Search Element</a>
-                </div>
-                <div class="list-group">
-                    <a target="_blank" href="style_element.html" class="list-group-item list-group-item-action list-group-item-secondary">Style Element</a>
-                </div>
-                <div class="list-group">
-                    <a target="_blank" href="text_element.html" class="list-group-item list-group-item-action list-group-item-secondary">Text Element</a>
-                </div>
-                <div class="list-group">
                     <a target="_blank" href="event.html" class="list-group-item list-group-item-action list-group-item-secondary">Event</a>
+                </div>
+                <div class="list-group">
+                    <a target="_blank" href="this.html" class="list-group-item list-group-item-action list-group-item-secondary">This</a>
                 </div>
                 <div class="list-group">
                     <a target="_blank" href="attribute.html" class="list-group-item list-group-item-action list-group-item-secondary">Attribute</a>
@@ -61,21 +49,25 @@
                     <a target="_blank" href="form.html" class="list-group-item list-group-item-action list-group-item-secondary">Form</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="class_list.html" class="list-group-item list-group-item-action list-group-item-secondary">Class List</a>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="list-group">
                     <a target="_blank" href="condition.html" class="list-group-item list-group-item-action list-group-item-secondary">Condition</a>
+                </div>
+                <div class="list-group">
+                    <a target="_blank" href="array/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Array</a>
                 </div>
                 <div class="list-group">
                     <a target="_blank" href="delay.html" class="list-group-item list-group-item-action list-group-item-secondary">Delay</a>
                 </div>
+
+            </div>
+            <div class="col-4">
                 <div class="list-group">
                     <a target="_blank" href="date.html" class="list-group-item list-group-item-action list-group-item-secondary">Date</a>
                 </div>
                 <div class="list-group">
                     <a target="_blank" href="loop.html" class="list-group-item list-group-item-action list-group-item-secondary">Loop</a>
+                </div>
+                <div class="list-group">
+                    <a target="_blank" href="class_list.html" class="list-group-item list-group-item-action list-group-item-secondary">Class List</a>
                 </div>
                 <div class="list-group">
                     <a target="_blank" href="element.html" class="list-group-item list-group-item-action list-group-item-secondary">Element</a>
