--- a/base/index.html
+++ b/base/index.html
@@ -26,7 +26,7 @@
                     <a target="_blank" href="variable.html" class="list-group-item list-group-item-action list-group-item-secondary">Variable</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="function.html" class="list-group-item list-group-item-action list-group-item-secondary">Function</a>
+                    <a target="_blank" href="functions/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Function</a>
                 </div>
                 <div class="list-group">
                     <a target="_blank" href="object.html" class="list-group-item list-group-item-action list-group-item-secondary">Object</a>
