--- a/base/functions/base.html
+++ b/base/functions/base.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Function - JavaScript Theory</title>
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/style.css">
+    <title>Function Base - JavaScript</title>
 </head>
 <body>
     <div class="container">
-		<h1 class="text-center">Function - JavaScript Theory</h1>
+		<h1 class="text-center">Function Base - JavaScript</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
@@ -42,41 +42,14 @@
                             </td>
                             <td></td>
                         </tr>
-                        <tr>
+						<tr>
                             <td class="text-center">4</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1ZiLlG1OIkl32nZUwkzgSQTNjhHPed-IH/view?usp=sharing">Рекурсивная</a>
+                                <a href="https://drive.google.com/file/d/1rOKb4Cfj3B-9bomypK2lMARsIq5HYs9V/view?usp=sharing">Опеатор return</a>
                             </td>
                             <td></td>
                         </tr>
-                        <tr>
-                            <td class="text-center">5</td>
-                            <td>
-                                <a href="https://drive.google.com/file/d/1lwPhgwzwBmJJIsCCWhpGJJSfksaUzrI3/view?usp=sharing">Bind</a>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td class="text-center">6</td>
-                            <td>
-                                <a href="https://drive.google.com/file/d/1_gbSxphnPgOnNX1cMtoMpHYzlHfJineb/view?usp=sharing">Анониманая</a>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td class="text-center">7</td>
-                            <td>
-                                <a href="https://drive.google.com/file/d/1kXzd_BTJSdw7o270bH-vn47sc72kofFR/view?usp=sharing">Стрелочная База</a>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td class="text-center">8</td>
-                            <td>
-                                <a href="https://drive.google.com/file/d/1HSw8fWN9toCbqArXgr6Z9lzNuUqgXsZD/view?usp=sharing">Стрелочная</a>
-                            </td>
-                            <td></td>
-                        </tr>
+                        
                     </tbody>
                 </thead>
             </table>
