--- a/base/functions/index.html
+++ b/base/functions/index.html
@@ -31,7 +31,7 @@
                         <tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="anomin_arrow.html">Anonim - Arrow Function</a>
+                                <a href="anonim_arrow.html">Anonim - Arrow Function</a>
                             </td>
                             <td>Анонимные и стрелочные функция</td>
                         </tr>
