--- a/advance/async/intro.html
+++ b/advance/async/intro.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <title>Ajax - JavaScript Theory</title>
+    <title>Async Intro - JavaScript Theory</title>
 </head>
 <body>
     <div class="container">
-		<h1 class="text-center">Ajax - JavaScript Theory</h1>
+		<h1 class="text-center">Async Intro - JavaScript Theory</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
@@ -24,16 +24,16 @@
                         <tr>
                             <td class="text-center">1</td>
                             <td>
-                                <a href="base.html">Intro</a>
+                                <a href="https://drive.google.com/file/d/1DzZdGTDHxAnrcK-IKS08qCxz9JQTSb4a/view?usp=sharing">Intro</a>
                             </td>
                             <td></td>
                         </tr>
-                        <tr>
+						<tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="libraries.html">Ajax - Libraries</a>
+                                <a href="https://drive.google.com/file/d/1YsYtZY8MHklfvkfdU0_iG1k0A2-h_MNB/view?usp=sharing">Request Ways</a>
                             </td>
-                            <td>Библиотеки для отправки ajax запросов</td>
+                            <td>Способы отправки запроса</td>
                         </tr>
                     </tbody>
                 </thead>
