--- a/advance/index.html
+++ b/advance/index.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-4">
                 <div class="list-group">
-                    <a href="ajax/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Ajax</a>
+                    <a href="async/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Async</a>
                 </div>
             </div>
             <div class="col-4">
