change async libraries

--- a/advance/async/index.html
+++ b/advance/async/index.html
@@ -52,7 +52,7 @@
                         <tr>
                             <td class="text-center">5</td>
                             <td>
-                                <a href="">Ajax - Libraries</a>
+                                <a href="https://priymakvl.github.io/js_libraries/ajax/index.html">Ajax - Libraries</a>
                             </td>
                             <td>Библиотеки для отправки ajax запросов</td>
                         </tr>
