--- a/base/array/index.html
+++ b/base/array/index.html
@@ -21,19 +21,19 @@
                     </tr>
                     </thead>
                     <tbody>
-                        <tr>
+						<tr>
                             <td class="text-center">1</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1vztuZO2uexBc0Tq2C-Kap3JdJ-rHWfXv/view?usp=sharing">База</a>
+                                <a href="https://drive.google.com/file/d/1RKiymU0H_bpPgh5aDrvKTFGTQ-zKZk1q/view?usp=sharing">Scheme</a>
                             </td>
-                            <td></td>
+                            <td>Схема массива</td>
                         </tr>
                         <tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1ZLMQ8eRMjERrPpbOVGaVxW7t-IaFLXqP/view?usp=sharing">Массив</a>
+                                <a href="https://drive.google.com/file/d/1vztuZO2uexBc0Tq2C-Kap3JdJ-rHWfXv/view?usp=sharing">Base</a>
                             </td>
-                            <td></td>
+                            <td>Описание и основы</td>
                         </tr>
                         <tr>
                             <td class="text-center">3</td>
@@ -55,6 +55,13 @@
                                 <a href="methods.html">Array Methods</a>
                             </td>
                             <td>Методы для работы с массивом</td>
+                        </tr>
+						<tr>
+                            <td class="text-center">6</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/14bnKeFtnHujssWp_AzgQ7FLyO-WvDTBM/view?usp=sharing">Node List Intro Array</a>
+                            </td>
+                            <td>Преобразование Node List в Массив</td>
                         </tr>
                     </tbody>
                 </thead>
