--- a/advance/index.html
+++ b/advance/index.html
@@ -18,7 +18,9 @@
                 </div>
             </div>
             <div class="col-4">
-
+				<div class="list-group">
+                    <a href="module/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Module</a>
+                </div>
             </div>
             <div class="col-4">
 
