add module example

--- a/advance/module/index.html
+++ b/advance/module/index.html
@@ -70,6 +70,13 @@
                             </td>
                             <td>Отличие конструкций</td>
                         </tr>
+						<tr>
+                            <td class="text-center">8</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/1xSgmMwik1kvOL8EN244qN1YPoO_Kx2kF/view?usp=sharing">Example</a>
+                            </td>
+                            <td>Пример создания и импорта модуля</td>
+                        </tr>
                     </tbody>
                 </thead>
             </table>
