add async await

--- a/advance/async/index.html
+++ b/advance/async/index.html
@@ -47,10 +47,17 @@
                             <td>
                                 <a href="fetch.html">method Fetch</a>
                             </td>
-                            <td></td>
+                            <td>метод Fetch</td>
+                        </tr>
+						<tr>
+                            <td class="text-center">5</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/1dnoGhH4aqYm1Zs3SWAlRQCpaCGcEFUeN/view?usp=sharing">Async Await</a>
+                            </td>
+                            <td>синтаксичексий сахар</td>
                         </tr>
                         <tr>
-                            <td class="text-center">5</td>
+                            <td class="text-center">6</td>
                             <td>
                                 <a href="https://priymakvl.github.io/js_libraries/ajax/index.html">Ajax - Libraries</a>
                             </td>
