add operator switch

--- a/base/condition.html
+++ b/base/condition.html
@@ -29,11 +29,18 @@
                             <td>Операторы if, else, else if</td>
                         </tr>
 						<tr>
-                            <td class="text-center">1</td>
+                            <td class="text-center">2</td>
                             <td>
                                 <a href="https://drive.google.com/file/d/1g6JXBtuV3ZKkt7FYHhrGE_FFaUazzPVw/view?usp=sharing">Ternary Operator</a>
                             </td>
                             <td>Тернарный оператор</td>
+                        </tr>
+						<tr>
+                            <td class="text-center">3</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/1-sIo-i0E1PCmyNAllwSAyNUpxXqdmmQa/view?usp=sharing">Operator Switch</a>
+                            </td>
+                            <td>Оператор Switch</td>
                         </tr>
                     </tbody>
                 </thead>
