add short if or

--- a/base/condition/index.html
+++ b/base/condition/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>Condition - JavaScript Theory</title>
 </head>
 <body>
@@ -41,6 +41,13 @@
                                 <a href="https://drive.google.com/file/d/1-sIo-i0E1PCmyNAllwSAyNUpxXqdmmQa/view?usp=sharing">Operator Switch</a>
                             </td>
                             <td>Оператор Switch</td>
+                        </tr>
+						<tr>
+                            <td class="text-center">3</td>
+                            <td>
+                                <a href="short.html">Short Operators</a>
+                            </td>
+                            <td>Операторы сокращающие код</td>
                         </tr>
                     </tbody>
                 </thead>
