--- a/base/index.html
+++ b/base/index.html
@@ -49,7 +49,7 @@
                     <a target="_blank" href="form.html" class="list-group-item list-group-item-action list-group-item-secondary">Form</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="condition.html" class="list-group-item list-group-item-action list-group-item-secondary">Condition</a>
+                    <a target="_blank" href="condition/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Condition</a>
                 </div>
                 <div class="list-group">
                     <a target="_blank" href="array/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Array</a>
