--- a/advance/async/fetch.html
+++ b/advance/async/fetch.html
@@ -26,17 +26,24 @@
                             <td>
                                 <a href="https://drive.google.com/file/d/17GA46QHkiQ-2DPPqUAeePqmnE-2wBGcI/view?usp=sharing">Intro</a>
                             </td>
-                            <td></td>
+                            <td>Назначение метода</td>
                         </tr>
 						<tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1RunVCBbp9OQsO2DqvoUYsOjeVfG8WCB6/view?usp=sharing">Base</a>
+                                <a href="https://drive.google.com/file/d/1RunVCBbp9OQsO2DqvoUYsOjeVfG8WCB6/view?usp=sharing">Syntax and Principle</a>
                             </td>
                             <td>Синтаксис и принцип работы</td>
                         </tr>
 						<tr>
                             <td class="text-center">3</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/1OJGqrOKOHp6y96At9LcZ_deFF6so6OrY/view?usp=sharing">Method GET</a>
+                            </td>
+                            <td>Отправка данных методом GET</td>
+                        </tr>
+						<tr>
+                            <td class="text-center">4</td>
                             <td>
                                 <a href="https://drive.google.com/file/d/1eqku3uev8-Nj9xWm27vXGkIpNdiclFMe/view?usp=sharing">Error</a>
                             </td>
