--- a/base/operators.html
+++ b/base/operators.html
@@ -21,8 +21,29 @@
                     </tr>
                     </thead>
                     <tbody>
-                        <tr>
+						<tr>
                             <td class="text-center">1</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/1T5k20lz4LgNgCXM_zAftrhMxrYnd1t8P/view?usp=sharing">Intro</a>
+                            </td>
+                            <td>Назначение операторов</td>
+                        </tr>
+						<tr>
+                            <td class="text-center">2</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/1F1IdFaqaK6aW3HQsO_qeLoV1zmBUmryS/view?usp=sharing">Arithmetic Operators</a>
+                            </td>
+                            <td>Арифметические операторы</td>
+                        </tr>
+						<tr>
+                            <td class="text-center">3</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/1MDea-fdxuf6Jeiw8hXaOhXw0U7DfdewM/view?usp=sharing">Concatenetion</a>
+                            </td>
+                            <td>Конкатенация строк</td>
+                        </tr>
+                        <tr>
+                            <td class="text-center">4</td>
                             <td>
                                 <a href="https://drive.google.com/file/d/1GNF2VU6QLJbFJti_IVaNI5q1VmB-9yP2/view?usp=sharing">Modulus</a>
                             </td>
