--- a/base/index.html
+++ b/base/index.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-4">
                 <div class="list-group">
-                    <a target="_blank" href="intro.html" class="list-group-item list-group-item-action list-group-item-secondary">Intro</a>
+                    <a target="_blank" href="start/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Start</a>
                 </div>
                 <div class="list-group">
                     <a target="_blank" href="data_types.html" class="list-group-item list-group-item-action list-group-item-secondary">Data Types</a>
