change async await

--- a/advance/async/async_await.html
+++ b/advance/async/async_await.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <title>Promise Object - JavaScript Theory</title>
+    <title>Async - JavaScript</title>
 </head>
 <body>
     <div class="container">
-		<h1 class="text-center">Promise Object - JavaScript Theory</h1>
+		<h1 class="text-center">Async - JavaScript</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
@@ -21,12 +21,19 @@
                     </tr>
                     </thead>
                     <tbody>
-                        <tr>
+						<tr>
                             <td class="text-center">1</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1c3L5mVF_knFTXG7NLMfpKXhNMsZhfQJm/view?usp=sharing">Base</a>
+                                <a href="https://drive.google.com/file/d/1dnoGhH4aqYm1Zs3SWAlRQCpaCGcEFUeN/view?usp=sharing">Intro</a>
                             </td>
-                            <td>Назначение</td>
+                            <td>Описание</td>
+                        </tr>
+						<tr>
+                            <td class="text-center">2</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/1b1QKI8adQb4AVd-Ka9efD09Obu7OH4pW/view?usp=sharing">With Method Fetch</a>
+                            </td>
+                            <td>Использование для отправки запроса на сервер</td>
                         </tr>
                     </tbody>
                 </thead>
