--- a/advance/async/intro.html
+++ b/advance/async/intro.html
@@ -26,7 +26,7 @@
                             <td>
                                 <a href="https://drive.google.com/file/d/1DzZdGTDHxAnrcK-IKS08qCxz9JQTSb4a/view?usp=sharing">Intro</a>
                             </td>
-                            <td></td>
+                            <td>Различие между синхронным и асинхронным кодом</td>
                         </tr>
 						<tr>
                             <td class="text-center">2</td>
