--- a/advance/async/index.html
+++ b/advance/async/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <title>Async - JavaScript Theory</title>
+    <title>Async - JavaScript</title>
 </head>
 <body>
     <div class="container">
-		<h1 class="text-center">Async - JavaScript Theory</h1>
+		<h1 class="text-center">Async - JavaScript</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
@@ -26,14 +26,14 @@
                             <td>
                                 <a href="intro.html">Intro</a>
                             </td>
-                            <td></td>
+                            <td>Назначение асинхронных запросов</td>
                         </tr>
 						<tr>
                             <td class="text-center">2</td>
                             <td>
                                 <a href="xml_http_request.html">object XMLHttpRequest</a>
                             </td>
-                            <td></td>
+                            <td>объект XMLHttpRequest</td>
                         </tr>
 						<tr>
                             <td class="text-center">3</td>
@@ -52,7 +52,7 @@
 						<tr>
                             <td class="text-center">5</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1dnoGhH4aqYm1Zs3SWAlRQCpaCGcEFUeN/view?usp=sharing">Async Await</a>
+                                <a href="async_await.html">Async / Await</a>
                             </td>
                             <td>синтаксичексий сахар</td>
                         </tr>
