--- a/advance/async/xml_http_request.html
+++ b/advance/async/xml_http_request.html
@@ -26,7 +26,7 @@
                             <td>
                                 <a href="https://drive.google.com/file/d/1wkOwaw3NO5z-ujfNNZUbJb8lMpAryAu-/view?usp=sharing">Intro</a>
                             </td>
-                            <td></td>
+                            <td>Описание</td>
                         </tr>
                     </tbody>
                 </thead>
