--- a/base/array/base.html
+++ b/base/array/base.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <title>Array - JavaScript Theory</title>
+    <title>Array Base - JavaScript Theory</title>
 </head>
 <body>
     <div class="container">
-		<h1 class="text-center">Array - JavaScript Theory</h1>
+		<h1 class="text-center">Array Base - JavaScript Theory</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
@@ -24,30 +24,16 @@
 						<tr>
                             <td class="text-center">1</td>
                             <td>
-                                <a href="base.html">Base</a>
+                                <a href="https://drive.google.com/file/d/1RKiymU0H_bpPgh5aDrvKTFGTQ-zKZk1q/view?usp=sharing">Scheme</a>
                             </td>
-                            <td>Базовое использование</td>
+                            <td>Схема массива</td>
                         </tr>
                         <tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="methods.html">Array Methods</a>
+                                <a href="https://drive.google.com/file/d/1vztuZO2uexBc0Tq2C-Kap3JdJ-rHWfXv/view?usp=sharing">Base</a>
                             </td>
-                            <td>Методы для работы с массивом</td>
-                        </tr>
-						<tr>
-                            <td class="text-center">3</td>
-                            <td>
-                                <a href="new.html">New</a>
-                            </td>
-                            <td>Новые конструкции для работы с массивом</td>
-                        </tr>
-						<tr>
-                            <td class="text-center">4</td>
-                            <td>
-                                <a href="solutions.html">Solutions</a>
-                            </td>
-                            <td>Примеры решений</td>
+                            <td>Описание и основы</td>
                         </tr>
                     </tbody>
                 </thead>
