--- a/base/array/methods.html
+++ b/base/array/methods.html
@@ -31,23 +31,23 @@
                         <tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1K7dsv_3_fm-tsoWiCVlk9N_c4k68xWhn/view?usp=sharing">method forEach</a>
+                                <a href="https://drive.google.com/file/d/1K7dsv_3_fm-tsoWiCVlk9N_c4k68xWhn/view?usp=sharing">Method forEach</a>
                             </td>
-                            <td></td>
+                            <td>Переборка массива</td>
                         </tr>
                         <tr>
                             <td class="text-center">3</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1TbGqLia-Pkhq4FO0elkMWyZqaixzc_tj/view?usp=sharing">method sort</a>
+                                <a href="sort.html">Method Sort</a>
                             </td>
-                            <td></td>
+                            <td>Сортировка элементов массива</td>
                         </tr>
                         <tr>
                             <td class="text-center">4</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1OGXa_NywrfUv-FEoIfnm7E54jCPGi0yK/view?usp=sharing">method indexOf</a>
+                                <a href="https://drive.google.com/file/d/1OGXa_NywrfUv-FEoIfnm7E54jCPGi0yK/view?usp=sharing">Method indexOf</a>
                             </td>
-                            <td></td>
+                            <td>Получение индекса по значению</td>
                         </tr>
                     </tbody>
                 </thead>
