--- a/base/array/new.html
+++ b/base/array/new.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <title>Array - JavaScript Theory</title>
+    <title>Array New - JavaScript</title>
 </head>
 <body>
     <div class="container">
-		<h1 class="text-center">Array - JavaScript Theory</h1>
+		<h1 class="text-center">Array New - JavaScript</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
@@ -21,33 +21,19 @@
                     </tr>
                     </thead>
                     <tbody>
-						<tr>
+                        <tr>
                             <td class="text-center">1</td>
                             <td>
-                                <a href="base.html">Base</a>
+                                <a href="https://drive.google.com/file/d/1kJI-c2NWBg90BBewnI1vBXjedsTYm5--/view?usp=sharing">Destructuring Assignment</a>
                             </td>
-                            <td>Базовое использование</td>
+                            <td>Деструктурирующее присваивание</td>
                         </tr>
                         <tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="methods.html">Array Methods</a>
+                                <a href="https://drive.google.com/file/d/18EHlPxGH22X_uvT5WZcZrG43tJi-ddlr/view?usp=sharing">Spread Syntax</a>
                             </td>
-                            <td>Методы для работы с массивом</td>
-                        </tr>
-						<tr>
-                            <td class="text-center">3</td>
-                            <td>
-                                <a href="new.html">New</a>
-                            </td>
-                            <td>Новые конструкции для работы с массивом</td>
-                        </tr>
-						<tr>
-                            <td class="text-center">4</td>
-                            <td>
-                                <a href="solutions.html">Solutions</a>
-                            </td>
-                            <td>Примеры решений</td>
+                            <td>Синтаксис распространения </td>
                         </tr>
                     </tbody>
                 </thead>
