--- a/base/array/sort.html
+++ b/base/array/sort.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <title>Array - JavaScript Theory</title>
+    <title>Array Method Sort - JavaScript</title>
 </head>
 <body>
     <div class="container">
-		<h1 class="text-center">Array - JavaScript Theory</h1>
+		<h1 class="text-center">Array Method Sort - JavaScript</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
@@ -21,33 +21,26 @@
                     </tr>
                     </thead>
                     <tbody>
-						<tr>
+                        <tr>
                             <td class="text-center">1</td>
                             <td>
-                                <a href="base.html">Base</a>
+                                <a href="https://drive.google.com/file/d/1Bb3shm1QJsyIzQDBSLIjOfn007j39_9d/view?usp=sharing">Base</a>
                             </td>
                             <td>Базовое использование</td>
                         </tr>
                         <tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="methods.html">Array Methods</a>
+                                <a href="https://drive.google.com/file/d/1WvrjF0ibycofdfVajTOnMtw1pZPPfT72/view?usp=sharing">Sort Number</a>
                             </td>
-                            <td>Методы для работы с массивом</td>
+                            <td>Сортировка чисел</td>
                         </tr>
-						<tr>
+                        <tr>
                             <td class="text-center">3</td>
                             <td>
-                                <a href="new.html">New</a>
+                                <a href="https://drive.google.com/file/d/1g8q2l20k2HydQmI7vW0hOZGTL4YtEKGn/view?usp=sharing">Shuffle Number</a>
                             </td>
-                            <td>Новые конструкции для работы с массивом</td>
-                        </tr>
-						<tr>
-                            <td class="text-center">4</td>
-                            <td>
-                                <a href="solutions.html">Solutions</a>
-                            </td>
-                            <td>Примеры решений</td>
+                            <td>Перемешивание чисел</td>
                         </tr>
                     </tbody>
                 </thead>
