--- a/base/event/object.html
+++ b/base/event/object.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Event- JavaScript Theory</title>
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/style.css">
+    <title>Event Object- JavaScript Theory</title>
 </head>
 <body>
     <div class="container">
-		<h1 class="text-center">Event - JavaScript Theory</h1>
+		<h1 class="text-center">Event Object- JavaScript Theory</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
@@ -24,26 +24,12 @@
                         <tr>
                             <td class="text-center">1</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1hYSDglHJL0IQCoKlTb8n8WZ2mPr8kgvN/view?usp=sharing">List Events</a>
+                                <a href="https://drive.google.com/file/d/1UamzcmkyEvBxMByzDaHj0hoRsHTtTTgC/view?usp=sharing">Base</a>
                             </td>
-                            <td>Типы событий</td>
+                            <td>Объект события</td>
                         </tr>
                         <tr>
                             <td class="text-center">2</td>
-                            <td>
-                                <a href="https://drive.google.com/file/d/1mEhTWe4upu3lC-TA4HiqCi5ENMWWNR5l/view?usp=sharing">Hendler Event</a>
-                            </td>
-                            <td>Обработчик события</td>
-                        </tr>
-                        <tr>
-                            <td class="text-center">3</td>
-                            <td>
-                                <a href="https://drive.google.com/file/d/1UamzcmkyEvBxMByzDaHj0hoRsHTtTTgC/view?usp=sharing">Object Event</a>
-                            </td>
-                            <td>Оьъект события</td>
-                        </tr>
-                        <tr>
-                            <td class="text-center">3</td>
                             <td>
                                 <a href="https://drive.google.com/file/d/1bUXzNyp4psqSw39Dn7X-LVTMOfRe4X75/view?usp=sharing">Cursor Cordinates</a>
                             </td>
