--- a/base/index.html
+++ b/base/index.html
@@ -14,69 +14,69 @@
         <div class="row">
             <div class="col-4">
                 <div class="list-group">
-                    <a target="_blank" href="start/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Start</a>
+                    <a href="start/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Start</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="data_types.html" class="list-group-item list-group-item-action list-group-item-secondary">Data Types</a>
+                    <a href="data_types.html" class="list-group-item list-group-item-action list-group-item-secondary">Data Types</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="operators.html" class="list-group-item list-group-item-action list-group-item-secondary">Operators</a>
+                    <a href="operators.html" class="list-group-item list-group-item-action list-group-item-secondary">Operators</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="variable.html" class="list-group-item list-group-item-action list-group-item-secondary">Variable</a>
+                    <a href="variable.html" class="list-group-item list-group-item-action list-group-item-secondary">Variable</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="functions/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Function</a>
+                    <a href="functions/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Function</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="object.html" class="list-group-item list-group-item-action list-group-item-secondary">Object</a>
+                    <a href="object.html" class="list-group-item list-group-item-action list-group-item-secondary">Object</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="element_base.html" class="list-group-item list-group-item-action list-group-item-secondary">Element Base</a>
+                    <a href="element_base.html" class="list-group-item list-group-item-action list-group-item-secondary">Element Base</a>
                 </div>
             </div>
             <div class="col-4">
                 <div class="list-group">
-                    <a target="_blank" href="event.html" class="list-group-item list-group-item-action list-group-item-secondary">Event</a>
+                    <a href="event/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Event</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="this.html" class="list-group-item list-group-item-action list-group-item-secondary">This</a>
+                    <a href="this.html" class="list-group-item list-group-item-action list-group-item-secondary">This</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="attribute.html" class="list-group-item list-group-item-action list-group-item-secondary">Attribute</a>
+                    <a href="attribute.html" class="list-group-item list-group-item-action list-group-item-secondary">Attribute</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="form.html" class="list-group-item list-group-item-action list-group-item-secondary">Form</a>
+                    <a href="form.html" class="list-group-item list-group-item-action list-group-item-secondary">Form</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="condition/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Condition</a>
+                    <a href="condition/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Condition</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="array/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Array</a>
+                    <a href="array/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Array</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="delay.html" class="list-group-item list-group-item-action list-group-item-secondary">Delay</a>
+                    <a href="delay.html" class="list-group-item list-group-item-action list-group-item-secondary">Delay</a>
                 </div>
 
             </div>
             <div class="col-4">
                 <div class="list-group">
-                    <a target="_blank" href="date.html" class="list-group-item list-group-item-action list-group-item-secondary">Date</a>
+                    <a href="date.html" class="list-group-item list-group-item-action list-group-item-secondary">Date</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="loop.html" class="list-group-item list-group-item-action list-group-item-secondary">Loop</a>
+                    <a href="loop.html" class="list-group-item list-group-item-action list-group-item-secondary">Loop</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="class_list.html" class="list-group-item list-group-item-action list-group-item-secondary">Class List</a>
+                    <a href="class_list.html" class="list-group-item list-group-item-action list-group-item-secondary">Class List</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="element.html" class="list-group-item list-group-item-action list-group-item-secondary">Element</a>
+                    <a href="element.html" class="list-group-item list-group-item-action list-group-item-secondary">Element</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="scroll.html" class="list-group-item list-group-item-action list-group-item-secondary">Scroll</a>
+                    <a href="scroll.html" class="list-group-item list-group-item-action list-group-item-secondary">Scroll</a>
                 </div>
                 <div class="list-group">
-                    <a target="_blank" href="window.html" class="list-group-item list-group-item-action list-group-item-secondary">Window</a>
+                    <a href="window.html" class="list-group-item list-group-item-action list-group-item-secondary">Window</a>
                 </div>
                 <div class="list-group">
                     <a target="_blank" href="animation.html" class="list-group-item list-group-item-action list-group-item-secondary">Animation</a>
