change event object

--- a/base/event/index.html
+++ b/base/event/index.html
@@ -40,7 +40,7 @@
                             <td>
                                 <a href="object.html">Object Event</a>
                             </td>
-                            <td>Оьъект события</td>
+                            <td>Объект события</td>
                         </tr>
                     </tbody>
                 </thead>
