--- a/base/event/object.html
+++ b/base/event/object.html
@@ -24,16 +24,30 @@
                         <tr>
                             <td class="text-center">1</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1UamzcmkyEvBxMByzDaHj0hoRsHTtTTgC/view?usp=sharing">Base</a>
+                                <a href="https://drive.google.com/file/d/1CfXIO8THFJigxbL-QMfQUVJYJQUY5z6C/view?usp=sharing">Info</a>
                             </td>
-                            <td>Объект события</td>
+                            <td>Объект события - назначение</td>
                         </tr>
                         <tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1bUXzNyp4psqSw39Dn7X-LVTMOfRe4X75/view?usp=sharing">Cursor Cordinates</a>
+                                <a href="https://drive.google.com/file/d/1z8h_YeLXtB57IutJ2-ZXtQX8pSPBHwhf/view?usp=sharing">Param - Handler Function</a>
                             </td>
-                            <td>Кординаты курсора</td>
+                            <td>Передача в функцию обработчик</td>
+                        </tr>
+						<tr>
+                            <td class="text-center">3</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/1QHSnXwjhDIAz2232WU8fkR2HtRKAnfSI/view?usp=sharing">Properties</a>
+                            </td>
+                            <td>Свойства объекта</td>
+                        </tr>
+						<tr>
+                            <td class="text-center">4</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/1qCiMWNoi8BaPR-bnn01Wa-VmFYglU7b1/view?usp=sharing">Methods</a>
+                            </td>
+                            <td>Методы объекта</td>
                         </tr>
                     </tbody>
                 </thead>
