--- a/base/element/index.html
+++ b/base/element/index.html
@@ -45,7 +45,7 @@
                         <tr>
                             <td class="text-center">4</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/17F895yVvKeA4cNPDhYJg6ByVhIhEkLtQ/view?usp=sharing">Text Element</a>
+                                <a href="base_text.html">Text Element</a>
                             </td>
                             <td>Управление текстом в элементе</td>
                         </tr>
