--- a/base/element/text.html
+++ b/base/element/text.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <title>Start - JavaScript</title>
+    <title>Element Text - JavaScript Theory</title>
 </head>
 <body>
     <div class="container">
-		<h1 class="text-center">Intro - JavaScript</h1>
+		<h1 class="text-center">Element Text - JavaScript Theory</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
@@ -21,27 +21,26 @@
                     </tr>
                     </thead>
                     <tbody>
-                        <!-- Intro -->
                         <tr>
                             <td class="text-center">1</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1eznd3MByGga8ov25YDryRFlVTzbg7RWy/view?usp=sharing">Intro</a>
+                                <a href="https://drive.google.com/file/d/18ec0dQDiLgu1MalNTgoVOQe7Lv-kLg8e/view?usp=sharing">Property innerText</a>
                             </td>
-                            <td>Введение</td>
+                            <td>Свойство innerText</td>
                         </tr>
-						<tr>
+                        <tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="connection.html">Connection</a>
+                                <a href="https://drive.google.com/file/d/1cvmy7tT9280u6xCVVElFzJXmRiTw_2Kv/view?usp=sharing">Property innerHTML</a>
                             </td>
-                            <td>Подключение JS</td>
+                            <td>Свойство innerHTML</td>
                         </tr>
 						<tr>
                             <td class="text-center">3</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1FVtNLP9CK_m7nBo2GSA-pvMRoWNl2FKQ/view?usp=sharing">Function Alert</a>
+                                <a href="https://drive.google.com/file/d/1JBnBzlxEQReBXtJCP5KQXlB4CK22SRDq/view?usp=sharing">Property textContent</a>
                             </td>
-                            <td>Функция Alert</td>
+                            <td>Свойство textContent</td>
                         </tr>
                     </tbody>
                 </thead>
