--- a/base/start/connection.html
+++ b/base/start/connection.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <title>Start - JavaScript</title>
+    <title>Start Connection - JavaScript</title>
 </head>
 <body>
     <div class="container">
-		<h1 class="text-center">Intro - JavaScript</h1>
+		<h1 class="text-center">Connection - JavaScript</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
@@ -21,27 +21,26 @@
                     </tr>
                     </thead>
                     <tbody>
-                        <!-- Intro -->
                         <tr>
                             <td class="text-center">1</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1eznd3MByGga8ov25YDryRFlVTzbg7RWy/view?usp=sharing">Intro</a>
+                                <a href="https://drive.google.com/file/d/1hCGGlJu_7gQT7eVWPIZvMif26hj059FX/view?usp=sharing">Connection Methods</a>
                             </td>
-                            <td>Введение</td>
+                            <td>Способы подключения js к файлу html</td>
                         </tr>
 						<tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="connection.html">Connection</a>
+                                <a href="">File Connection</a>
                             </td>
-                            <td>Подключение JS</td>
+                            <td>Подключение файла JS</td>
                         </tr>
 						<tr>
                             <td class="text-center">3</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1FVtNLP9CK_m7nBo2GSA-pvMRoWNl2FKQ/view?usp=sharing">Function Alert</a>
+                                <a href="https://drive.google.com/file/d/1p8Euk-BdABiU37XHloX3myYGHuppqloN/view?usp=sharing">Attribute Defer</a>
                             </td>
-                            <td>Функция Alert</td>
+                            <td>Атрибут  Defer</td>
                         </tr>
                     </tbody>
                 </thead>
