--- a/base/start/connection.html
+++ b/base/start/connection.html
@@ -31,7 +31,7 @@
 						<tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="">File Connection</a>
+                                <a href="https://drive.google.com/file/d/1KiH7EsxA21_9MfUGGGG-MjtW7G0dgAgP/view?usp=drive_link">File Connection</a>
                             </td>
                             <td>Подключение файла JS</td>
                         </tr>
