change js element

--- a/base/index.html
+++ b/base/index.html
@@ -32,7 +32,7 @@
                     <a href="object.html" class="list-group-item list-group-item-action list-group-item-secondary">Object</a>
                 </div>
                 <div class="list-group">
-                    <a href="element_base.html" class="list-group-item list-group-item-action list-group-item-secondary">Element Base</a>
+                    <a href="element/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Element</a>
                 </div>
             </div>
             <div class="col-4">
@@ -68,9 +68,6 @@
                 </div>
                 <div class="list-group">
                     <a href="class_list.html" class="list-group-item list-group-item-action list-group-item-secondary">Class List</a>
-                </div>
-                <div class="list-group">
-                    <a href="element.html" class="list-group-item list-group-item-action list-group-item-secondary">Element</a>
                 </div>
                 <div class="list-group">
                     <a href="scroll.html" class="list-group-item list-group-item-action list-group-item-secondary">Scroll</a>
