--- a/base/element/methods/index.html
+++ b/base/element/methods/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../css/style.css">
-    <title>Element - JavaScript</title>
+    <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../css/style.css">
+    <title>Methods Control Element - JavaScript</title>
 </head>
 <body>
     <div class="container">
-		<h1 class="text-center">Element - JavaScript</h1>
+		<h1 class="text-center">Methods Control Element - JavaScript</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
@@ -21,40 +21,47 @@
                     </tr>
                     </thead>
                     <tbody>
-                        <tr>
+						<tr>
                             <td class="text-center">1</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1pzLpG7nqc8RtNlfmFYXfeB0hZg9UXj8b/view?usp=sharing">DOM</a>
+                                <a href="https://drive.google.com/file/d/1B19wGLukwWL40iHkYTKovwTYab1cGNYs/view?usp=sharing">Methods List</a>
                             </td>
-                            <td>Document Object Model</td>
+                            <td>Перечень методов</td>
                         </tr>
                         <tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="search/index.html">Search Element</a>
+                                <a href="create.html">Create Element</a>
                             </td>
-                            <td>Поиск элемента</td>
+                            <td>Создание элемента</td>
                         </tr>
                         <tr>
                             <td class="text-center">3</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1aG9gcPUoaCmlb8PeYHULRusakHzVMe8l/view?usp=sharing">Style Element</a>
+                                <a href="add.html">Add Element</a>
                             </td>
-                            <td>Изменение стилей CSS элемента</td>
+                            <td>Добавление элемента на страницу</td>
                         </tr>
-                        <tr>
+						<tr>
                             <td class="text-center">4</td>
                             <td>
-                                <a href="text.html">Text Element</a>
+                                <a href="remove.html">Remove Element</a>
                             </td>
-                            <td>Управление текстом в элементе</td>
+                            <td>Удаление элемента</td>
                         </tr>
-                        <tr>
+						<tr>
                             <td class="text-center">5</td>
                             <td>
-                                <a href="methods/index.html">Methods Control</a>
+                                <a href="https://drive.google.com/file/d/17uuK7ezetyGu4gczK0C2oiTgppzQjM8J/view?usp=sharing">Clone Element</a>
                             </td>
-                            <td>Методы для управления элементом</td>
+                            <td>Копирование элемента</td>
+                        </tr>
+						<tr>
+                            <td class="text-center">6</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/162RBo3zuWVEvPODrzOgIRuPsJ0I-va0X/view?usp=sharing">Replace Element</a>
+                            </td>
+                            <td>Замена элемента</td>
                         </tr>
                     </tbody>
                 </thead>
