--- a/base/start/index.html
+++ b/base/start/index.html
@@ -43,6 +43,13 @@
                             </td>
                             <td>Функция Alert</td>
                         </tr>
+						<tr>
+                            <td class="text-center">4</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/1U2XaT3UPwKuAZxlO1rheSvBgOiNXmEa1/view?usp=sharing">Base Terms</a>
+                            </td>
+                            <td>Базовые термины</td>
+                        </tr>
                     </tbody>
                 </thead>
             </table>
