change this theory

--- a/base/this.html
+++ b/base/this.html
@@ -28,10 +28,17 @@
                             </td>
                             <td>В функциях обработчиках событий</td>
                         </tr>
-                        <tr>
+						<tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/11hSOoEhlNlQqZSRbIxDp2qUDRDO_QMGP/view?usp=sharing">Method</a>
+                                <a href="https://drive.google.com/file/d/1ZTFyMd4majXgz06R31ozqGAFT6OR4T3y/view?usp=sharing">Arrow Function</a>
+                            </td>
+                            <td>В стрелочных функциях</td>
+                        </tr>
+                        <tr>
+                            <td class="text-center">3</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/19cN2O4nSphdJDrJmMh2yPJVbuuroXuev/view?usp=sharing">Object</a>
                             </td>
                             <td>В методах объекта</td>
                         </tr>
