--- a/base/form/select.html
+++ b/base/form/select.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Form - JavaScript Theory</title>
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/style.css">
+    <title>Form Element Select - JavaScript Theory</title>
 </head>
 <body>
     <div class="container">
-		<h1 class="text-center">Form - JavaScript Theory</h1>
+		<h1 class="text-center">Form Element Select - JavaScript Theory</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
@@ -24,37 +24,37 @@
                         <tr>
                             <td class="text-center">1</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1r8WAXYiBNNiCltmvnLISHJguvVOMPNfh/view?usp=sharing">Form</a>
+                                <a href="https://drive.google.com/file/d/12oO43CksRZMKxfuOPSDQBviwlJbsgzQ2/view?usp=sharing">Intro</a>
                             </td>
-                            <td>Работа с формой</td>
+                            <td>Описание</td>
                         </tr>
                         <tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/10kaNCB8exCDrkCQEcqOdBFxHAFYrhT4L/view?usp=sharing">Form Elements</a>
+                                <a href="https://drive.google.com/file/d/1EW7mYU4VpC6R-4C4m-QHSBaw7tvmS1Ef/view?usp=drive_link">Value</a>
                             </td>
-                            <td></td>
+                            <td>Получение значения элемента</td>
                         </tr>
-                        <tr>
+						<tr>
                             <td class="text-center">3</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1zPcnVCLF2rKlCQVv5Xj7FGCPWrwpmR6y/view?usp=sharing">Form Input</a>
+                                <a href="https://drive.google.com/file/d/17QSlHOfyhZqePeLF7n5BymLD46kaiizX/view?usp=sharing">Text</a>
                             </td>
-                            <td></td>
+                            <td>Получение текста элемента</td>
                         </tr>
-                        <tr>
+						<tr>
                             <td class="text-center">4</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1seEs5aR9DZypGrzHmpfxmUR2_L7P3Ato/view?usp=sharing">Form Select</a>
+                                <a href="https://drive.google.com/file/d/1OYHoEfsK8fvKF-Te-lXhjveFdEgH2upw/view?usp=sharing">Active Element</a>
                             </td>
-                            <td></td>
+                            <td>Установить активынй элемент</td>
                         </tr>
-                        <tr>
+						<tr>
                             <td class="text-center">5</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1RmJP2J11GV5y3icexbXykq9_Du-U_uNu/view?usp=sharing">Form Textarea</a>
+                                <a href="https://drive.google.com/file/d/1JBMA5T1TJsAe-6LgAPbZRTEggHkVmVNj/view?usp=sharing">Properties</a>
                             </td>
-                            <td></td>
+                            <td>Свойства элемента</td>
                         </tr>
                     </tbody>
                 </thead>
