--- a/base/index.html
+++ b/base/index.html
@@ -46,7 +46,7 @@
                     <a href="attribute.html" class="list-group-item list-group-item-action list-group-item-secondary">Attribute</a>
                 </div>
                 <div class="list-group">
-                    <a href="form.html" class="list-group-item list-group-item-action list-group-item-secondary">Form</a>
+                    <a href="form/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Form</a>
                 </div>
                 <div class="list-group">
                     <a href="condition/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Condition</a>
