change async await post

--- a/advance/async/async_await.html
+++ b/advance/async/async_await.html
@@ -31,9 +31,16 @@
 						<tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1b1QKI8adQb4AVd-Ka9efD09Obu7OH4pW/view?usp=sharing">With Method Fetch</a>
+                                <a href="https://drive.google.com/file/d/1b1QKI8adQb4AVd-Ka9efD09Obu7OH4pW/view?usp=sharing">Method Fetch - GET</a>
                             </td>
-                            <td>Использование для отправки запроса на сервер</td>
+                            <td>Отправка запроса на сервер методом GET</td>
+                        </tr>
+						<tr>
+                            <td class="text-center">3</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/153Nt29YTAzyfIYKF-8UsoOf_L0uaKuXc/view?usp=sharing">Method Fetch - POST</a>
+                            </td>
+                            <td>Отправка запроса на сервер методом GET</td>
                         </tr>
                     </tbody>
                 </thead>
