--- a/advance/async/async_await.html
+++ b/advance/async/async_await.html
@@ -42,6 +42,13 @@
                             </td>
                             <td>Отправка запроса на сервер методом GET</td>
                         </tr>
+						<tr>
+                            <td class="text-center">4</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/1OtUk1pyjLmflC8eO0pawjyz7wuM56-Qx/view?usp=sharing">class FormData</a>
+                            </td>
+                            <td>класс для работы с данными формы</td>
+                        </tr>
                     </tbody>
                 </thead>
             </table>
