change ajax post

--- a/advance/async/fetch/index.html
+++ b/advance/async/fetch/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../css/style.css">
-    <title>Method Fetch - JavaScript Theory</title>
+    <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../css/style.css">
+    <title>Fetch - JavaScript Theory</title>
 </head>
 <body>
     <div class="container">
-		<h1 class="text-center">Method Fetch - JavaScript Theory</h1>
+		<h1 class="text-center">Fetch - JavaScript Theory</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
@@ -26,7 +26,7 @@
                             <td>
                                 <a href="https://drive.google.com/file/d/17GA46QHkiQ-2DPPqUAeePqmnE-2wBGcI/view?usp=sharing">Intro</a>
                             </td>
-                            <td>Назначение метода</td>
+                            <td>Назначение</td>
                         </tr>
 						<tr>
                             <td class="text-center">2</td>
@@ -52,7 +52,7 @@
 						<tr>
                             <td class="text-center">4</td>
                             <td>
-                                <a href="https://drive.google.com/file/d/1B6ORqILWmOR2Cdr9sycE2HK8GryJOPck/view?usp=sharing">Method Post</a>
+                                <a href="post.html">Method Post</a>
                             </td>
                             <td>Отравка данных методом POST</td>
                         </tr>
