--- a/advance/async/fetch/post.html
+++ b/advance/async/fetch/post.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../css/style.css">
-    <title>Base Vue.js - Start</title>
+    <title>Fetch Post - JavaScript Theory</title>
 </head>
 <body>
     <div class="container">
-		<h1 class="text-center">Base Vue.js - Start</h1>
+		<h1 class="text-center">Fetch Post  - JavaScript Theory</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
@@ -24,23 +24,30 @@
 						<tr>
                             <td class="text-center">1</td>
                             <td>
-                                <a href="">Intro</a>
+                                <a href="https://drive.google.com/file/d/1B6ORqILWmOR2Cdr9sycE2HK8GryJOPck/view?usp=sharing">Method Post</a>
                             </td>
-                            <td>Описание фреймворка</td>
+                            <td>Отравка данных методом POST</td>
                         </tr>
 						<tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="install.html">Install</a>
+                                <a href="https://drive.google.com/file/d/1RDxkXOewygGu3ouzdjo1jKDFp9Nvgp6s/view?usp=sharing">Form</a>
                             </td>
-                            <td>Установка фреймворка</td>
+                            <td>Отравка данных как из формы</td>
                         </tr>
 						<tr>
                             <td class="text-center">3</td>
                             <td>
-                                <a href="">Create Project</a>
+                                <a href="https://drive.google.com/file/d/1nSNn8TNX2F9c_Wn0x5q4Wd1y_11-F8e1/view?usp=sharing">FormData</a>
                             </td>
-                            <td>Создание приложения</td>
+                            <td>Отравка данных с использованием объекта FormData</td>
+                        </tr>
+						<tr>
+                            <td class="text-center">3</td>
+                            <td>
+                                <a href="https://drive.google.com/file/d/1C9lGGXhBcRiyARHANwPG_QMuijlyonbH/view?usp=sharing">JSON</a>
+                            </td>
+                            <td>Отравка данных с использованием JSON</td>
                         </tr>
                     </tbody>
                 </thead>
