--- a/advance/async/index.html
+++ b/advance/async/index.html
@@ -45,9 +45,9 @@
 						<tr>
                             <td class="text-center">4</td>
                             <td>
-                                <a href="fetch.html">method Fetch</a>
+                                <a href="fetch/index.html">Fetch API</a>
                             </td>
-                            <td>метод Fetch</td>
+                            <td>Отправка асинхронного запроса на сервер</td>
                         </tr>
 						<tr>
                             <td class="text-center">5</td>
